--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,32 +2,18 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.anrlabs.reminders" >
 
-    <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES" />
-    <!--
- The ACCESS_COARSE/FINE_LOCATION permissions are not required to use
-         Google Maps Android API v2, but are recommended.
-    -->
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="com.example.googlemaps.permission.MAPS_RECEIVE" />
 
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
-
-        <meta-data
-            android:name="com.google.android.gms.version"
-            android:value="@integer/google_play_services_version" />
-
-        <meta-data
-            android:name="com.google.android.maps.v2.API_KEY"
-            android:value="AIzaSyAS3cXW1YbSyJaawhq9hF18_qL81gCxuKA"/>
-
-
         <activity
             android:name="com.anrlabs.reminders.MainActivity"
             android:label="@string/app_name" >
@@ -38,10 +24,25 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".NewReminder"
-            android:label ="New Reminder" >
-
+            android:name="com.anrlabs.reminders.NewReminder"
+            android:label="New Reminder" >
         </activity>
+
+        <receiver
+            android:name="com.anrlabs.locationreminder.GeoFenceReceiver"
+            android:exported="false" >
+            <intent-filter>
+                <action android:name="com.anrlabs.ACTION_RECEIVE_GEOFENCE" />
+            </intent-filter>
+        </receiver>
+
+        <meta-data
+            android:name="com.google.android.gms.version"
+            android:value="@integer/google_play_services_version" />
+        <meta-data
+            android:name="com.google.android.maps.v2.API_KEY"
+            android:value="AIzaSyD5Cj5IjdLaU4a66o6sPEQ-r8b6cPyCpxA" />
+
 
     </application>
 
