Time Reminder completed (it may be off by seconds in API 19) Archie - 12/16/2014 11:36

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,6 +29,10 @@
                 <action android:name="android.intent.action.RUN" />
             </intent-filter>
         </activity>
+        <activity
+            android:name="com.anrlabs.reminders.ShowReminder"
+            android:label="Recorded Reminder" >
+        </activity>
 
         <receiver
             android:name="com.anrlabs.locationreminder.GeoFenceReceiver"
