Implementation of NoData safeguard Archie - 12/16/2014 16:16

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,8 @@
         android:theme="@style/AppTheme" >
         <activity
             android:name="com.anrlabs.reminders.MainActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name"
+            android:screenOrientation="portrait" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
@@ -24,14 +25,16 @@
         </activity>
         <activity
             android:name="com.anrlabs.reminders.NewReminder"
-            android:label="New Reminder" >
+            android:label="New Reminder"
+            android:screenOrientation="portrait" >
             <intent-filter>
                 <action android:name="android.intent.action.RUN" />
             </intent-filter>
         </activity>
         <activity
             android:name="com.anrlabs.reminders.ShowReminder"
-            android:label="Recorded Reminder" >
+            android:label="Recorded Reminder"
+            android:screenOrientation="portrait" >
         </activity>
 
         <receiver
