--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,6 +8,7 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="com.example.googlemaps.permission.MAPS_RECEIVE" />
+    <uses-permission android:name="android.permission.VIBRATE"/>
 
     <application
         android:allowBackup="true"
@@ -20,6 +21,7 @@
             android:screenOrientation="portrait" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -55,7 +57,10 @@
             android:name="com.google.android.maps.v2.API_KEY"
             android:value="AIzaSyD5Cj5IjdLaU4a66o6sPEQ-r8b6cPyCpxA" />
 
-
+        <activity
+            android:name="com.anrlabs.reminders.Preferences"
+            android:label="@string/title_activity_preferences" >
+        </activity>
     </application>
 
 </manifest>
